Fix a bug on nav z-index

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -221,7 +221,7 @@ nav a {
         background: rgba($red, .9);
         position: absolute;
         top: -100vh;
-        z-index: -1;
+        z-index: 9;
     }
   }
 
